# ipfs-service

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  code_report.md  conftest.py  development_plan.md  files.db  install_ipfs.sh  integration_client.py  main.py  manifest.md  project_spec.md  pyproject.toml  quick_test.py  requirements.txt  run_all_tests.py  setup.py  test_core.py  test_hooks.py  test_hooks_simple.py  test_lint.py  test_module_integration.py  test_units.py  version_manager.py  walk.py
app/: __init__.py  auth.py  config.py  database.py  logging_config.py
app/api/: __init__.py  admin.py  files.py
app/models/: file.py
app/services/: ipfs.py
app/static/: index.html  script.js  style.css
kubo/: LICENSE
test_env/: pyvenv.cfg
tests/: conftest.py  test_api.py  test_manifest.md  test_models.py  test_services.py
